[gd_scene load_steps=19 format=2]

[ext_resource path="res://crocodile/scenes/crocodileHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://crocodile/scripts/CrocodileScene.gd" type="Script" id=2]
[ext_resource path="res://crocodile/assets/sound/CrocodileGrogne.ogg" type="AudioStream" id=3]
[ext_resource path="res://crocodile/assets/terrain/water_normal_2.png" type="Texture" id=4]
[ext_resource path="res://crocodile/assets/terrain/TerrainCrocodile.dae" type="PackedScene" id=5]
[ext_resource path="res://fonts/menu_dynamicfont.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/label_button_dynamicfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/label_dynamicfont.tres" type="DynamicFont" id=8]
[ext_resource path="res://scenes/player3.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/player4.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/player1.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/player2.tscn" type="PackedScene" id=12]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=7]
background_mode = 3
background_sky = SubResource( 1 )
background_sky_orientation = Basis( -1, 0, 0, 0, 1, 0, 0, 0, -1 )
background_color = Color( 0.317647, 0.952941, 1, 1 )
background_energy = 0.0

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 60, 60 )
center_offset = Vector3( 0, 0, -7.5 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0.0980392, 0.466667, 0.2, 0.823529 )
roughness = 0.99
normal_enabled = true
normal_scale = 0.09
normal_texture = ExtResource( 4 )
refraction_enabled = true
refraction_scale = 0.13
refraction_texture = ExtResource( 4 )
refraction_texture_channel = 0
uv1_scale = Vector3( 10, 10, 1 )
proximity_fade_enable = true
proximity_fade_distance = 0.5

[sub_resource type="Animation" id=6]
resource_name = "uv_water"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/0:uv1_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 0, 0 ) ]
}

[sub_resource type="ButtonGroup" id=8]
resource_local_to_scene = false

[node name="CrocodileScene" type="Spatial"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.684433, 0.729076, 0, -0.729076, 0.684433, 0, 32.3964, 54.6852 )

[node name="TerrainCrocodile" parent="." instance=ExtResource( 5 )]

[node name="Water" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.5922 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Water"]
autoplay = "uv_water"
playback_speed = 0.2
anims/uv_water = SubResource( 6 )

[node name="CrocodileHead" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.990006, 0.141022, 0, -0.141022, 0.990006, 0, 0.145, -0.011 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.735222, 0.677826, 0, -0.677826, 0.735222, 0, 1.66447, 2.03147 )

[node name="SoundCrocodile" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Player1" parent="." instance=ExtResource( 11 )]
position = Vector2( 720, 70 )

[node name="Player2" parent="." instance=ExtResource( 12 )]
position = Vector2( 880, 70 )

[node name="Player3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1040, 70 )

[node name="Player4" parent="." instance=ExtResource( 10 )]
position = Vector2( 1200, 70 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonBackMenu" type="Button" parent="CanvasLayer"]
margin_left = 32.9628
margin_top = 74.9153
margin_right = 152.963
margin_bottom = 134.915
rect_min_size = Vector2( 130, 60 )
custom_fonts/font = ExtResource( 6 )
text = "Menu"

[node name="LabelVolume" type="Label" parent="CanvasLayer"]
light_mask = 0
anchor_left = 1.0
anchor_right = 1.0
margin_left = -165.0
margin_top = 21.0
margin_right = -55.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 110, 30 )
custom_fonts/font = ExtResource( 6 )
text = "Volume"
align = 1
valign = 1

[node name="SliderVolume" type="HSlider" parent="CanvasLayer"]
light_mask = 0
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = 70.0
grow_horizontal = 2
rect_min_size = Vector2( 130, 30 )
min_value = -24.0
max_value = 0.0
step = 2.0
rounded = true
allow_greater = true
allow_lesser = true
scrollable = false
tick_count = 5
ticks_on_borders = true
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonContinue" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 330.0
margin_right = 60.0
margin_bottom = 380.0
grow_horizontal = 2
rect_min_size = Vector2( 130, 60 )
custom_fonts/font = ExtResource( 6 )
text = "Continue"

[node name="ContainerButtonChoice" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -450.0
margin_top = -80.0
margin_right = 450.0
margin_bottom = -25.0
grow_horizontal = 2
rect_min_size = Vector2( 900, 55 )
custom_constants/separation = 10
alignment = 1

[node name="ButtonTooth_1" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 32.0
margin_right = 87.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
shortcut_in_tooltip = false
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_2" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 97.0
margin_right = 152.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
group = SubResource( 8 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_3" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 162.0
margin_right = 217.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_4" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 227.0
margin_right = 282.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_5" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 292.0
margin_right = 347.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_6" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 357.0
margin_right = 412.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_7" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 422.0
margin_right = 477.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_8" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 487.0
margin_right = 542.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_9" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 552.0
margin_right = 607.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_10" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 617.0
margin_right = 672.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_11" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 682.0
margin_right = 737.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "11"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_12" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 747.0
margin_right = 802.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTooth_13" type="Button" parent="CanvasLayer/ContainerButtonChoice" groups=["buttons_tooth"]]
margin_left = 812.0
margin_right = 867.0
margin_bottom = 55.0
rect_min_size = Vector2( 55, 50 )
custom_fonts/font = ExtResource( 7 )
text = "13"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIndicator" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -130.0
grow_horizontal = 2
rect_min_size = Vector2( 800, 120 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
max_lines_visible = 1

[node name="LabelPlay" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
rect_min_size = Vector2( 800, 110 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1

[node name="ButtonChoicePlayer_1" type="Button" parent="CanvasLayer" groups=["button_type"]]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.0
margin_top = 200.0
margin_right = -195.0
margin_bottom = 240.0
grow_horizontal = 2
rect_min_size = Vector2( 110, 60 )
custom_fonts/font = ExtResource( 6 )
text = "Change"

[node name="ButtonChoicePlayer_2" type="Button" parent="CanvasLayer" groups=["button_type"]]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 200.0
margin_right = -35.0
margin_bottom = 240.0
grow_horizontal = 2
rect_min_size = Vector2( 110, 60 )
custom_fonts/font = ExtResource( 6 )
text = "Change"

[node name="ButtonChoicePlayer_3" type="Button" parent="CanvasLayer" groups=["button_type"]]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 35.0
margin_top = 200.0
margin_right = 125.0
margin_bottom = 240.0
grow_horizontal = 2
rect_min_size = Vector2( 110, 60 )
custom_fonts/font = ExtResource( 6 )
text = "Change"

[node name="ButtonChoicePlayer_4" type="Button" parent="CanvasLayer" groups=["button_type"]]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 195.0
margin_top = 200.0
margin_right = 285.0
margin_bottom = 240.0
grow_horizontal = 2
rect_min_size = Vector2( 110, 60 )
custom_fonts/font = ExtResource( 6 )
text = "Change"

[node name="ButtonPlay" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 300.0
margin_right = 60.0
rect_min_size = Vector2( 120, 60 )
custom_fonts/font = ExtResource( 6 )
text = "Play"

[connection signal="pressed" from="CanvasLayer/ButtonBackMenu" to="." method="_on_ButtonBackMenu_pressed"]
[connection signal="value_changed" from="CanvasLayer/SliderVolume" to="." method="_on_SliderVolume_value_changed"]
[connection signal="pressed" from="CanvasLayer/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonChoicePlayer_1" to="." method="_on_ButtonChoicePlayer_1_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonChoicePlayer_2" to="." method="_on_ButtonChoicePlayer_2_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonChoicePlayer_3" to="." method="_on_ButtonChoicePlayer_3_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonChoicePlayer_4" to="." method="_on_ButtonChoicePlayer_4_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
